enable upload processed gsla files to s3

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,19 @@ spring:
   application:
     name: imos-mapbox-server
 
+
 app:
   storage:
     path: ${user.home}/generated-images
+  scheduling:
+    taskS3Upload:
+      enabled: true
+
+cloud:
+  aws:
+    region:
+      static: ap-southeast-2
+    s3:
+      bucket: imos-live-test-leslie
 
 
