--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,6 @@ cloud:
     region:
       static: ap-southeast-2
     s3:
-      bucket: imos-live-test-leslie
+      bucket: datavis-apps-edge-data
 
 
